# screamsheet-dispatch

./: LICENSE  README.md  dispatch_config.yaml  dispatch_config.yaml.example  pyproject.toml
.github/: copilot-instructions.md
docs/: prd-screamsheet-dispatch.md  setup-checklist.md  technical-design-dispatch.md
src/screamsheet_dispatch/: __init__.py  __main__.py  cleanup.py  config.py  delivery.py  logger.py  runner.py  sync.py
tests/: __init__.py  conftest.py  test_cleanup.py  test_config.py  test_delivery.py  test_logger.py  test_runner.py  test_sync.py
transcripts-and-emails/: 20260506_ScreamsheetRunnerDiscussion.md  INDEX.md
